edited playlist organization